--- a/index.html
+++ b/index.html
@@ -30,6 +30,84 @@
   </div>
 </div>
 
+<img class="ui centered image" src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/logo.png?12738032654134160651">
+
+<div class="ui borderless middlemenu menu">
+  <div class="ui centered grid container">
+    <div class="ui dropdown item">
+      <div class="text">MEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">TANK TOPS</div>
+        <div class="item">SHIRTS</div>
+        <div class="item">LONG SLEEVE SHIRTS</div>
+        <div class="item">SWEATSHIRTS</div>
+        <div class="item">ALOHA SHIRTS</div>
+        <div class="item">BORADSHORTS</div>
+        <div class="item">HATS</div>
+        <div class="item">ACCESSORIES</div>
+        <div class="item">BAGS AND WALLETS</div>
+        <div class="item">STICKERS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">WOMEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">TANK TOPS</div>
+        <div class="item">SHIRTS</div>
+        <div class="item">LONG SLEEVE SHIRTS</div>
+        <div class="item">SWEATSHIRTS</div>
+        <div class="item">HATS</div>
+        <div class="item">ACCESSORIES</div>
+        <div class="item">BAGS AND WALLETS</div>
+        <div class="item">STICKERS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">KIDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">SHIRTS</div>
+        <div class="item">ONESIES</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">BRANDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">ALOHA SURF PROJECT</div>
+        <div class="item">DA MOKES</div>
+        <div class="item">FARMERS MARKET HAWAII</div>
+        <div class="item">HAWAII DOMESTIC MARKET</div>
+        <div class="item">HERSCHEL SUPPLY CO.</div>
+        <div class="item">HILIFE</div>
+        <div class="item">ISLAND SNOW HAWAII</div>
+        <div class="item">KAILUA BOYS</div>
+        <div class="item">KAILUA GIRLS</div>
+        <div class="item">KA'OHAO</div>
+        <div class="item">LANIKAI CANOE CLUB</div>
+        <div class="item">MOKULUA HULA</div>
+        <div class="item">REYN SPOONER</div>
+        <div class="item">RVCA HAWAII</div>
+        <div class="item">SRF</div>
+        <div class="item">STANCE</div>
+        <div class="item">STUSSY</div>
+        <div class="item">TORI RICHARD</div>
+        <div class="item">VOLCOM HAWAII</div>
+      </div>
+    </div>
+
+    <a class="item">SEARCH</a>
+
+  </div>
+</div>
+
+<img class="ui fluid imgae" src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/slide1.jpg?12738032654134160651">
+
 <script>
   $('.ui.dropdown')
       .dropdown()
