--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <a class="fitted right item"><i class="home icon"></i></a>
     <a class="fitted item"><i class="search icon"></i></a>
     <a class="fitted item"><i class="user icon"></i></a>
-    <div class="ui dropdown fitted item">
+    <div class="ui simple dropdown fitted item">
       <div class="text">MY CART <i class="cart icon"></i> 0</div>
       <i class="dropdown icon"></i>
       <div class="menu">
-        <div class="item">My cart is currently empty.</div>
+        <div class="item">Your cart is currently empty.</div>
       </div>
     </div>
   </div>
@@ -34,7 +34,7 @@
 
 <div class="ui borderless middlemenu menu">
   <div class="ui centered grid container">
-    <div class="ui dropdown item">
+    <div class="ui simple dropdown item">
       <div class="text">MEN</div>
       <i class="dropdown icon"></i>
       <div class="menu">
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div class="ui dropdown item">
+    <div class="ui simple dropdown item">
       <div class="text">WOMEN</div>
       <i class="dropdown icon"></i>
       <div class="menu">
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div class="ui dropdown item">
+    <div class="ui simple dropdown item">
       <div class="text">KIDS</div>
       <i class="dropdown icon"></i>
       <div class="menu">
@@ -75,7 +75,7 @@
       </div>
     </div>
 
-    <div class="ui dropdown item">
+    <div class="ui simple dropdown item">
       <div class="text">BRANDS</div>
       <i class="dropdown icon"></i>
       <div class="menu">
@@ -107,6 +107,47 @@
 </div>
 
 <img class="ui fluid imgae" src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/slide1.jpg?12738032654134160651">
+
+<div class="footer-background">
+  <div class="ui three column grid container">
+    <div class="column">
+      NAVIGATION
+      <hr/>
+      <div class="ui list">
+        <div class="item">About Us</div>
+        <div class="item">Videos</div>
+        <div class="item">Store Locations</div>
+        <div class="item">Shipping & Returns</div>
+        <div class="item">Terms & Conditions</div>
+        <div class="item">Privacy Policy</div>
+      </div>
+    </div>
+    <div class="column">
+      MAIN MENU
+      <hr/>
+      <div class="ui list">
+        <div class="item">Men</div>
+        <div class="item">Women</div>
+        <div class="item">Kids</div>
+        <div class="item">Brands</div>
+        <div class="item">Search</div>
+      </div>
+    </div>
+    <div class="column">
+      CONNECT
+      <hr/>
+      <div class="ui list">
+        <div class="item">Sign up for the last updates</div>
+        <div class="ui labeled input">
+          <input tyrpe="text" placeholder="Enter Email Address">
+          <div class="ui black button">
+            Join
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <script>
   $('.ui.dropdown')
